# grabowski

./: .gitignore  .routing-shadow-bootstrap-diagnostic.txt  .routing-shadow-test-diagnostic.txt  .routing-shadow-validate-diagnostic.txt  AGENTS.md  CHANGELOG.md  GRABOWSKI.md  Makefile  OPERATOR_V2_REPORT.md  README.md  SECURITY.md  pyproject.toml
.github/: .audit-process-lock-ci-trigger  .audit-process-lock-final-ci-trigger  CODEOWNERS  pr-186-integration-trigger.txt
config/: access.example.json  access.home-wide-operator.example.json  access.trusted-owner.example.json  coding-agent-catalog.json  fleet.example.json  local-evidence-job.example.json  operations.example.json  privileged-actions.example.json  review-evidence-allowed-signers  runtime-entrypoint.json
contracts/: access-policy.v1.schema.json  access-policy.v2.schema.json  capability-catalog.v1.json  capability-catalog.v1.schema.json  execution-governor-outcome.v1.schema.json  git-diff-artifact.v1.schema.json  local-evidence-job.v1.schema.json  local-evidence-pilot-record.v1.schema.json  local-evidence-result.v1.schema.json  operation-catalog.v1.json  operator-blockade-state.v1.schema.json  operator-friction-decision.v1.schema.json  operator-friction-event.v1.schema.json  operator-routing-shadow-capture-attempt.v1.schema.json  operator-routing-shadow-direct-task-binding.v1.schema.json  operator-routing-shadow-eligibility.v1.schema.json  operator-routing-shadow-eligibility.v2.schema.json  operator-routing-shadow-eligibility.v3.schema.json  operator-routing-shadow-prospective-eligibility.v1.schema.json  operator-routing-shadow-prospective-eligibility.v2.schema.json  operator-routing-shadow-record.v1.schema.json  operator-routing-shadow-record.v2.schema.json  operator-routing-shadow-record.v3.schema.json  privileged-action-reference.v1.schema.json  publication-profiles.v1.json  tool-surface-budget.v1.json  tool-surface-budget.v1.schema.json
docs/: agent-facing-contract.md  agent-run-events-runbook.md  agent-workspace-v1.md  architecture.md  attention-decision-benchmark-v1.md  audit-chain-recovery-v1.md  audit-projection-v1.md  audit-query-trace-v1.md  automatic-workspace-outcome-binding-v1.md  autonomy.md  blocked-action-protocol-v0.md  browser-stored-form-action.md  bureau-lease-contract-v2.md  bureau-operator-intake-adapter-v1.md  bureau-pickup.md  captain-action-evidence-schemas-v1.md  captain-execution-authority-contract-v1.md  checkout-binding-reconciler.md  checkout-lifecycle.md  coding-agent-routing-v2.md  connector-snapshot-handshake-v1.md  consumer-surface-v1.md  (+50 more)
(+333 files in other folders)
