[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grabowski-mcp"
version = "0.1.0"
description = "Local MCP operator for the Heim-PC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp==1.27.2"
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["grabowski_mcp", "grabowski_operator", "grabowski_operator_core", "grabowski_consumer_surface", "grabowski_private_io", "grabowski_job_origin", "grabowski_job_finalizer", "grabowski_chronik", "grabowski_grips", "grabowski_operator_obligation", "grabowski_repobrief", "grabowski_agent_workspace", "grabowski_agent_role", "grabowski_agent_sandbox", "grabowski_agent_writer", "grabowski_bureau_leases", "grabowski_nonconflict", "grabowski_juno"]
