[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grabowski-mcp"
version = "0.1.0"
description = "Local MCP operator for the Heim-PC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp==1.27.2"
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["grabowski_mcp", "grabowski_operator", "grabowski_operator_core", "grabowski_operator_relay", "grabowski_consumer_surface", "grabowski_client_snapshot", "grabowski_private_io", "grabowski_job_origin", "grabowski_job_finalizer", "grabowski_chronik", "grabowski_grips", "grabowski_task_attention", "grabowski_operator_obligation", "grabowski_repobrief", "grabowski_repoground_catalog", "grabowski_agent_workspace", "grabowski_agent_role", "grabowski_agent_sandbox", "grabowski_agent_writer", "grabowski_bureau_leases", "grabowski_bureau_intake", "grabowski_nonconflict", "grabowski_convergence", "grabowski_coding_agent_router", "grabowski_coding_agent_catalog_data", "grabowski_coding_agent_router_cli", "grabowski_juno", "grabowski_juno_storage"]
